dodal opis hadamardove matrike v ltx file

--- a/doc/lvr-docs.ltx
+++ b/doc/lvr-docs.ltx
@@ -100,6 +100,7 @@
 		\subsection{Sudoku}
 			Odločitveni problem \cclass{SUDOKU}, grobo povedano, sprašuje, če lahko prazna polja $9\times 9$ mreže zapolnimo tako, da bo konfiguracija veljavna. Sudoku prevedmo na $9$-barvanje grafa $G$ na točkah $s_{11},s_{12},\ldots,s_{21},\ldots,s_{99}$. (Točke ustrezajo poljem $9\times9$ mreže.) Naj bo $s_{ij}$ polje v $i$-ti vrstici in $j$-tem stoplcu. Potem povežemo graf tako, da je $G[\{s_{i1},\ldots,s_{i9}]$ poln graf na $9$ točkah $\{s_{i1}, \ldots,s_{i9}\}$ za vsako vrstico $i$; podobno je $G[\{s_{1j},\ldots,s_{9j}\}]$ poln graf na $9$ točkah za vsak stolpec $j$. To pomeni $18\cdot\binom{9}{2}$ povezav. Na koncu dodamo manjkajoče povezave iz $3\times 3$ kvadratkov --- dodamo povezave, da točke $3\times 3$ podmrež tvorijo $K_9$ --- kar nam da dodatnih $5\cdot9$ povezav, ker imamo $9$ takih podmrež. (Primer: Za zgornjo levo $3\times 3$ podmrežo povežemo $s_{12}$ in $s_{21}$, $s_{21}$ in $s_{32}$, $s_{32}$ in $s_{23}$, $s_{12}$ in $s_{23}$; digaonali $s_{11},s_{22}, s_{33}$ in $s_{31},s_{22}, s_{31}$ vsaka zase tvorita $K_3$.)
 		\subsection{Hadamard}
+		Pri odločitvenem problemu Hadamardove matrike najprej generiramo matriko velikosti $n \times n$ (paramater $n$ poda uporabnik) spremenljivk $v_{1}s_{1}, v_{1}s_{2}, \ldots v_{n}s_{n}$, kjer spremeljivka $v_{i}s_{j}$ predstavlja komponento v $i$-ti vrstici in $j$-tem solpcu matrike. Nato naredimo $XOR$ vseh možnih parov vrstic za vsak stolpec, nakar z uporabo knjižnice \textit{itertools} generiramo vse možne stolpce, ki imajo $\frac{n}{2}$ elementov $1$ (\textit{true}) in $\frac{n}{2}$ elementov $-1$ (\textit{false}). Za vsak stolpec $j$ povežemo enačbe vseh možnih stolpec, ki ustrezajo stolpcu na mestu $j$ z operacijo $OR$, nakar dobljene $OR$ enačbe za vsak posamazen stolpec povežemo še z $AND$ operacijo in s tem dobimo ustrezno logično enačbo za Hadamardovo matriko.
 			
 		\subsection{Erd\H{o}sev problem diskrepance}
 			Uporabimo program Konev-Lisista.
