--- a/doc/lvr-docs.ltx
+++ b/doc/lvr-docs.ltx
@@ -68,12 +68,12 @@
 \begin{document}
 	\maketitle
 	
-	\tableofcontents
+	%\tableofcontents
 	
-	\section{Uvod}
-		V delu.
-	\section{Predstavitev formul}
-		V delu. 
+	%\section{Uvod}
+		%V delu.
+	%\section{Predstavitev formul}
+		%V delu. 
 	\section{Prevedbe problemov na \cclass{SAT}}
 		V tem poglavju grobo opišemo prevedbe nekaterih odločitvenih problemov na odločitvenih problem \cclass{SAT}, ki sprašuje ali za dano Boolovo formulo obstaja taka prireditev vrednosti spremenljivkam, da bo formula resnična. Preden nadaljujemo vzpostavimo nekaj notacije. Pišemo $[n] := \{1,2,\ldots,n\}$ za prvih $n$ naravnih števil in $\binom{[n]}{k}$ za družino $k$-podmnožic množice $[n]$; tako je $\binom{n}{k}=|\binom{[n]}{k}|$.
 		\subsection{Barvanje grafov}
@@ -98,12 +98,12 @@
 			\end{equation*}
 			Formula je velikosti približno $2mk+nk+2n\binom{k}{2}=O(k(m+nk))$.
 		\subsection{Sudoku}
-			Odločitveni problem \cclass{SUDOKU}, grobo povedano, sprašuje, če lahko prazna polja $9\times 9$ mreže zapolnimo tako, da bo konfiguracija veljavna. Sudoku prevedmo na $9$-barvanje grafa $G$ na točkah $s_{11},s_{12},\ldots,s_{21},\ldots,s_{99}$. (Točke ustrezajo poljem $9\times9$ mreže.) Naj bo $s_{ij}$ polje v $i$-ti vrstici in $j$-tem stoplcu. Potem povežemo graf tako, da je $G[\{s_{i1},\ldots,s_{i9}]$ poln graf na $9$ točkah $\{s_{i1}, \ldots,s_{i9}\}$ za vsako vrstico $i$; podobno je $G[\{s_{1j},\ldots,s_{9j}\}]$ poln graf na $9$ točkah za vsak stolpec $j$. To pomeni $18\cdot\binom{9}{2}$ povezav. Na koncu dodamo manjkajoče povezave iz $3\times 3$ kvadratkov --- dodamo povezave, da točke $3\times 3$ podmrež tvorijo $K_9$ --- kar nam da dodatnih $5\cdot9$ povezav, ker imamo $9$ takih podmrež. (Primer: Za zgornjo levo $3\times 3$ podmrežo povežemo $s_{12}$ in $s_{21}$, $s_{21}$ in $s_{32}$, $s_{32}$ in $s_{23}$, $s_{12}$ in $s_{23}$; digaonali $s_{11},s_{22}, s_{33}$ in $s_{31},s_{22}, s_{31}$ vsaka zase tvorita $K_3$.)
+			Odločitveni problem \cclass{SUDOKU} sprašuje, če lahko prazna polja $9\times 9$ Sudoku mreže zapolnimo tako, da bo konfiguracija veljavna. Sudoku prevedmo na $9$-barvanje grafa $G$ na točkah $s_{11},s_{12},\ldots,s_{21},\ldots,s_{99}$. (Točke ustrezajo poljem $9\times9$ mreže.) Naj bo $s_{ij}$ polje v $i$-ti vrstici in $j$-tem stoplcu. Potem povežemo graf tako, da je $G[\{s_{i1},\ldots,s_{i9}\}]$ poln graf na $9$ točkah $\{s_{i1}, \ldots,s_{i9}\}$ za vsako vrstico $i$; podobno je $G[\{s_{1j},\ldots,s_{9j}\}]$ poln graf na $9$ točkah za vsak stolpec $j$. To pomeni $18\cdot\binom{9}{2}$ povezav. Na koncu dodamo manjkajoče povezave iz $3\times 3$ kvadratkov --- dodamo povezave, da točke $3\times 3$ podmrež tvorijo $K_9$ --- kar nam da dodatnih $5\cdot9$ povezav, ker imamo $9$ takih podmrež. (Primer: Za zgornjo levo $3\times 3$ podmrežo povežemo $s_{12}$ in $s_{21}$, $s_{21}$ in $s_{32}$, $s_{32}$ in $s_{23}$, $s_{12}$ in $s_{23}$; digaonali $s_{11},s_{22}, s_{33}$ in $s_{31},s_{22}, s_{31}$ vsaka zase tvorita $K_3$.)
 		\subsection{Hadamard}
-		Pri odločitvenem problemu Hadamardove matrike najprej generiramo matriko velikosti $n \times n$ (paramater $n$ poda uporabnik) spremenljivk $v_{1}s_{1}, v_{1}s_{2}, \ldots v_{n}s_{n}$, kjer spremeljivka $v_{i}s_{j}$ predstavlja komponento v $i$-ti vrstici in $j$-tem solpcu matrike. Nato naredimo $XOR$ vseh možnih parov vrstic za vsak stolpec, nakar z uporabo knjižnice \textit{itertools} generiramo vse možne stolpce, ki imajo $\frac{n}{2}$ elementov $1$ (\textit{true}) in $\frac{n}{2}$ elementov $-1$ (\textit{false}). Za vsak stolpec $j$ povežemo enačbe vseh možnih stolpec, ki ustrezajo stolpcu na mestu $j$ z operacijo $OR$, nakar dobljene $OR$ enačbe za vsak posamazen stolpec povežemo še z $AND$ operacijo in s tem dobimo ustrezno logično enačbo za Hadamardovo matriko.
+			Pri odločitvenem problemu Hadamardove matrike najprej generiramo matriko velikosti $n \times n$ (paramater $n$ poda uporabnik) spremenljivk $v_{1}s_{1}, v_{1}s_{2}, \ldots, v_{n}s_{n}$, kjer spremeljivka $v_{i}s_{j}$ predstavlja komponento v $i$-ti vrstici in $j$-tem solpcu matrike. Nato naredimo $XOR$ vseh možnih parov vrstic za vsak stolpec, nakar z uporabo knjižnice \textit{itertools} generiramo vse možne stolpce, ki imajo $\frac{n}{2}$ elementov $1$ (\textit{true}) in $\frac{n}{2}$ elementov $-1$ (\textit{false}). Za vsak stolpec $j$ povežemo enačbe vseh možnih stolpec, ki ustrezajo stolpcu na mestu $j$ z operacijo $OR$, nakar dobljene $OR$ enačbe za vsak posamazen stolpec povežemo še z $AND$ operacijo in s tem dobimo ustrezno Boolovo formulo za Hadamardovo matriko.
 			
 		\subsection{Erd\H{o}sev problem diskrepance}
-			Uporabimo program Konev-Lisista.
-	\section{SAT solver}
-		V delu.
+			Za generiranje \cclass{SAT} instanc uporabljamo program, ki sta ga napisala Konev in Lisista.
+	%\section{SAT solver}
+	%	V delu.
 \end{document}
